<resources>
    <string name="app_name">Exchange Your Toy!</string>
    <string name="intro_first_line">Welcome to ToySwap</string>
    <string name="intro_second_line">where the joy of giving and receiving toys finds a new home!</string>
    <string name="btn_login">Login Here!</string>
    <string name="btn_user_signup">Join Our Community Now!</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="user_login">User Login</string>
    <string name="registraion_message">New User Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="btn_register">Register</string>
</resources>