<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="371dp"
            android:layout_height="238dp"
            android:layout_gravity="center"
            android:layout_marginTop="100sp"
            android:src="@drawable/intro2"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_first_line"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:layout_marginTop="30sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_second_line"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:layout_marginTop="10sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnloginbg"
            android:layout_marginTop="30sp"
            android:text="@string/btn_login"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/btnUserLogin"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsignupbg"
            android:layout_marginTop="10sp"
            android:text="@string/btn_user_signup"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/btnUserSignup"
            />

    </LinearLayout>




</LinearLayout>