<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="371dp"
            android:layout_height="238dp"
            android:layout_gravity="center"
            android:layout_marginTop="100sp"
            android:src="@drawable/intro2"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registraion_message"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userFirstNameWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userFirstName"
                android:inputType="text"
                android:hint="@string/first_name"
                android:textSize="18sp"

                />

        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/lastNameWrapper"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userLastName"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    android:textSize="18sp"
                    android:layout_marginLeft="8sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userEmailAddressWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userEmailAddress"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:textSize="18sp"/>


        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/passwordWrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userPassword"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/confPasswordWrapper">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userconfPassword"
                    android:inputType="textPassword"
                    android:textSize="18dp"
                    android:hint="@string/confirm_password"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="8sp"></EditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactWrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userContactNumber"
                android:inputType="phone"
                android:textSize="18sp"
                android:hint="@string/contact_number"
                android:layout_marginTop="5dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:text="@string/btn_register"
            android:textSize="20sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>