<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/screenbg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="371dp"
            android:layout_height="238dp"
            android:layout_gravity="center"
            android:layout_marginTop="100sp"
            android:src="@drawable/intro2"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="20dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userEmailWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userEmail"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:textSize="18sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userPasswordWrapper"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userPassword"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/user_login"
            android:background="@drawable/btnloginbg"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/userSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_user_signup"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/orange"
            />


    </LinearLayout>

</LinearLayout>